doc: adding my name to authors file

--- a/AUTHORS
+++ b/AUTHORS
@@ -11,6 +11,7 @@
   class of 2023, at ICMC, University of Sao Paulo, with contributions
   from several developers (GitHub usernames):
 
+  * Gustavo Bhering Grande (NotorioGrande)
   * Lucas Almeida (lalmeida32)
 
   
