added controls-menu to the project

--- a/AUTHORS
+++ b/AUTHORS
@@ -14,7 +14,7 @@
   * Gustavo Bhering Grande (NotorioGrande)
   * Lucas Almeida (lalmeida32)
   * Gustavo Sampaio (GusSampaio)
-
+  * Thiago Zero Araujo (thzero0)
   
  
 
