Fixed best score not fitting window

--- a/AUTHORS
+++ b/AUTHORS
@@ -15,7 +15,8 @@
   * Lucas Almeida (lalmeida32)
   * Gustavo Sampaio (GusSampaio)
   * Angelo Antonio Bertoli Guido (angelobguido)
-
+  * Rogerio Lopes Lube (rogerllube)
+  * Samuel Figueiredo Veronez (Zeronevi)
   
  
 
