--- a/AUTHORS
+++ b/AUTHORS
@@ -15,6 +15,7 @@
   * Lucas Almeida (lalmeida32)
   * Gustavo Sampaio (GusSampaio)
   * Angelo Antonio Bertoli Guido (angelobguido)
+  * Gustavo Gabriel Ribeiro (GustavoZiel)
 
   
  
