--- a/AUTHORS
+++ b/AUTHORS
@@ -16,6 +16,7 @@
   * Gustavo Sampaio (GusSampaio)
   * Angelo Antonio Bertoli Guido (angelobguido)
   * Gustavo Gabriel Ribeiro (GustavoZiel)
+  * Thiago Sena de Queiroz (ThiagoSDQ)
 
   
  
