--- a/AUTHORS
+++ b/AUTHORS
@@ -17,6 +17,7 @@
   * Angelo Antonio Bertoli Guido (angelobguido)
   * Gustavo Gabriel Ribeiro (GustavoZiel)
   * Thiago Sena de Queiroz (ThiagoSDQ)
+  * João Pedro Buzzo Silva (buzzo-cancri)
 
   
  
