chore: update AUTHORS and Changelog for keyboard support in main menu

--- a/AUTHORS
+++ b/AUTHORS
@@ -18,7 +18,7 @@
   * Gustavo Gabriel Ribeiro (GustavoZiel)
   * Thiago Sena de Queiroz (ThiagoSDQ)
   * João Pedro Buzzo Silva (buzzo-cancri)
-
+  * Samuel Rubens Souza Oliveira (rubenszinho)
   
  
 
