--- a/AUTHORS
+++ b/AUTHORS
@@ -19,6 +19,7 @@
   * Thiago Sena de Queiroz (ThiagoSDQ)
   * João Pedro Buzzo Silva (buzzo-cancri)
   * Samuel Rubens Souza Oliveira (rubenszinho)
+  * Lucas de Medeiros França Romero (lmfromero)
   
  
 
