--- a/AUTHORS
+++ b/AUTHORS
@@ -20,7 +20,7 @@
   * João Pedro Buzzo Silva (buzzo-cancri)
   * Samuel Rubens Souza Oliveira (rubenszinho)
   * Lucas de Medeiros França Romero (lmfromero)
-  
+  * Lucas Eduardo Gulka Pulcinelli (lucasgpulcinelli)
  
 
  
