--- a/AUTHORS
+++ b/AUTHORS
@@ -21,6 +21,7 @@
   * Samuel Rubens Souza Oliveira (rubenszinho)
   * Lucas de Medeiros França Romero (lmfromero)
   * Lucas Eduardo Gulka Pulcinelli (lucasgpulcinelli)
+  * Jefferson Eduardo Muniz Bueno (voidashi)
  
 
  
