--- a/AUTHORS
+++ b/AUTHORS
@@ -22,6 +22,7 @@
   * Lucas de Medeiros França Romero (lmfromero)
   * Lucas Eduardo Gulka Pulcinelli (lucasgpulcinelli)
   * Jefferson Eduardo Muniz Bueno (voidashi)
+  * Victor Henrique de Sa Silva (VictorHenrique)
  
 
  
