--- a/AUTHORS
+++ b/AUTHORS
@@ -23,7 +23,8 @@
   * Lucas Eduardo Gulka Pulcinelli (lucasgpulcinelli)
   * Jefferson Eduardo Muniz Bueno (voidashi)
   * Victor Henrique de Sa Silva (VictorHenrique)
- 
+  * Leandro Sena Silva (leandrousp)
+  * Silmar Pereira da Silva Junior (silmarp)
 
  
  
