--- a/AUTHORS
+++ b/AUTHORS
@@ -26,6 +26,11 @@
   * Leandro Sena Silva (leandrousp)
   * Silmar Pereira da Silva Junior (silmarp)
   * Thaís Ribeiro Lauriano (thaislauriano31)
+  * Gabriel Sousa Santos de Almeida (GabrielSSAlmeida)
+  * João Gabriel Manfré Nazar (jotagenazar)
+  * Luís Henrique Giorgetti Dantas (LuisHDantas)
+  * Camila Donda Ronchi (Camiladronchi)
+  * Lucas Piovani Ferreira (LucasPiovanii)
 
  
  
