--- a/AUTHORS
+++ b/AUTHORS
@@ -31,6 +31,9 @@
   * Luís Henrique Giorgetti Dantas (LuisHDantas)
   * Camila Donda Ronchi (Camiladronchi)
   * Lucas Piovani Ferreira (LucasPiovanii)
-
+  * Lucas de Oliveira Ferreira (LucasOF23)
+  * Bruno Matheus Foschiani Ricardo (brun0-matheus)
+  * Arthur Queiroz Moura (arthur-qm)
+  * Enzo Nunes Sedenho (HeNunes)
  
  
