added me as author

--- a/AUTHORS
+++ b/AUTHORS
@@ -35,5 +35,6 @@
   * Bruno Matheus Foschiani Ricardo (brun0-matheus)
   * Arthur Queiroz Moura (arthur-qm)
   * Enzo Nunes Sedenho (HeNunes)
- 
- 
+  * Pedro Henrique Borges Monici (pedromonici)
+
+
