--- a/NEWS
+++ b/NEWS
@@ -11,5 +11,5 @@
    Improve snake movement
    Add snake customization when pressing 'C'
    Add best score
-
+   Add different fruit with power-ups
    
