--- a/AUTHORS
+++ b/AUTHORS
@@ -36,5 +36,6 @@
   * Arthur Queiroz Moura (arthur-qm)
   * Enzo Nunes Sedenho (HeNunes)
   * Pedro Henrique Borges Monici (pedromonici)
+  * Nicholas Yudi Kurita Ikai (niicao)
 
 
