--- a/AUTHORS
+++ b/AUTHORS
@@ -37,5 +37,6 @@
   * Enzo Nunes Sedenho (HeNunes)
   * Pedro Henrique Borges Monici (pedromonici)
   * Davi Fagundes Ferreira da Silva (daviFferreiraS)
+  * Nicholas Yudi Kurita Ikai (niicao)
 
 
