--- a/AUTHORS
+++ b/AUTHORS
@@ -38,5 +38,6 @@
   * Pedro Henrique Borges Monici (pedromonici)
   * Davi Fagundes Ferreira da Silva (daviFferreiraS)
   * Nicholas Yudi Kurita Ikai (niicao)
+  * Thierry de Souza Araújo (ThierryAra)
 
 
