--- a/AUTHORS
+++ b/AUTHORS
@@ -39,5 +39,5 @@
   * Davi Fagundes Ferreira da Silva (daviFferreiraS)
   * Nicholas Yudi Kurita Ikai (niicao)
   * Thierry de Souza Araújo (ThierryAra)
-
+  * Yure Pablo do Nascimento Oliveira (yp1plus)
 
